# archon

./: .gitignore  CHANGELOG.md  CRYPTO_DOMAINS_IMPLEMENTATION.md  Cargo.toml  Makefile  README.md  ROADMAP_TO_DOMINANCE.md  SECURITY.md  TESTING_GUIDE.md  test_archon_chromium.sh
$tmpdir/: ghostdns.sqlite
.github/ISSUE_TEMPLATE/: packaging.md
.github/workflows/: archon-bench-load.yml  main.yml
assets/: ICON_VARIANTS.md  swap-icon.sh
assets/native-messaging/: archon_host.chrome.json  archon_host.chromium.json
assets/scripts/: generate-icons.sh
assets/systemd/user/: archon-host.service  ghostdns.service
assets/themes/: archon-light.json  dracula.json  nord.json  rosepine-moon.json  rosepine.json  tokyonight-moon.json  tokyonight-storm.json  tokyonight.json
automation/recipes/: example.json
crates/archon-bench/: Cargo.toml  README.md
crates/archon-bench/src/: main.rs  scenarios.rs
dev/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: MVP.md  QUICKSTART.md  README.md  chromium_max.md  competitive_analysis.md  crypto_domains.md  install_troubleshooting.md  observability.md  release_checklist.md  roadmap.md  security.md
docs/architecture/: README.md  chromium-max.md
docs/automation/: recipes.md
docs/crypto/: README.md  domains.md
docs/dashboards/: ai-mcp-connectors.json  ghostdns-overview.json  gpu-matrix.json  webgpu-watchdog.json
docs/examples/launcher/: ai-lab-edge.jsonc  hardened-edge.jsonc
docs/getting-started/: README.md  quickstart.md  troubleshooting.md
docs/integrations/: conduit.md  mcp-server.md  sidebar-tools.md
docs/operations/: README.md  release-checklist.md
docs/reference/: README.md  roadmap.md
docs/security/: README.md  overview.md
docs/themes/: README.md  tokyonight.md
extensions/archon-sidebar/: README.md  background.js  manifest.json  panel.html  panel.js  styles.css
extensions/crypto-omnibox/: README.md  background.js  gen_icons.sh  manifest.json
extensions/themes/: README.md
extensions/themes/among-trees-ii/: manifest.json
extensions/themes/arch-linux-blue/: manifest.json
extensions/themes/block-chain/: manifest.json
extensions/themes/blue-galaxy/: manifest.json
extensions/themes/celestial-skies/: manifest.json
extensions/themes/firewatch/: manifest.json
extensions/themes/firewatch-night/: manifest.json
extensions/themes/material-ocean-deep/: manifest.json
extensions/themes/mount-theme/: manifest.json
extensions/themes/neon-driver/: manifest.json
extensions/themes/pulse-chain/: manifest.json
extensions/themes/ride-the-wave-eth/: manifest.json
extensions/themes/riding-through-the-night/: manifest.json
extensions/themes/sunset-by-mikael-gustafsson/: manifest.json
extensions/themes/themebeta-custom/: manifest.json
extensions/themes/tokyonight-moon/: manifest.json
extensions/themes/tokyonight-night/: manifest.json
extensions/themes/tokyonight-storm/: manifest.json
packaging/: README.md
packaging/apparmor/: archon
packaging/aur/archon/: PKGBUILD
packaging/aur/archon-bin/: PKGBUILD  archon.desktop
packaging/selinux/: archon.te
policy/: chromium_max_policies.json
src/: agent.rs  ai.rs  automation.rs  browser.rs  cli.rs  conduit.rs  config.rs  crypto.rs  engine.rs  ens.rs  ghostdns.rs  host.rs  ipfs.rs  lib.rs  mcp.rs  mcp_server.rs  n8n.rs  policy.rs  process_util.rs  profile.rs  recipe.rs  research.rs  search.rs  summarize.rs  sync.rs  sync_util.rs  telemetry.rs  test_util.rs  theme.rs  transcript.rs  ui.rs  vision.rs  voice.rs
src/ghostdns/: daemon.rs
tools/: check_theme_manifests.py
tools/sbom/: generate.sh
tools/scripts/: enable_archon_services.sh  export_theme_pack.sh  ghostdns_runtime_smoke.sh  package_sidebar.sh  package_smoke_install.sh
tools/signing/: sign-release.sh
