[package]
name = "archon"
version = "0.1.0"
edition = "2024"
autobins = false

[workspace]
members = ["crates/archon-bench"]
resolver = "2"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
which = "6.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
url = "2.5"
wayland-client = "0.31"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
hyper = { version = "1.4", features = ["http1", "http2", "server"] }
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
futures-util = "0.3"
hickory-proto = { version = "0.24", features = ["serde"] }
toml = "0.8"
tower = "0.4"
prometheus = "0.13"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
webpki-roots = "0.25"
cid = "0.11"
hex = "0.4"
unsigned-varint = "0.7"
	infer = "0.15"
quinn = { version = "0.11", features = ["rustls"] }
rustls-pki-types = "1.12"
dialoguer = { version = "0.11", default-features = false, features = ["editor", "fuzzy-select"] }
once_cell = "1.19"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.12"
http-body-util = "0.1"

[[bin]]
name = "archon"
path = "src/bin/archon.rs"

[[bin]]
name = "ghostdns"
path = "src/bin/ghostdns.rs"

[[bin]]
name = "archon-host"
path = "src/bin/archon_host.rs"

[[bin]]
name = "archon-settings"
path = "src/bin/archon_settings.rs"
