[package]
name = "archon-bench"
version = "0.1.0"
edition = "2024"
authors = ["GhostKellz <dev@ghostkellz.sh>"]
description = "Benchmark harness for the Archon browser stack"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
headless_chrome = "1.0"